- css > 고급 > grid > 부모 속성 작업 중

--- a/assets/02-css/04-cssAdvanced/05-css_grid_part2.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part2.html
@@ -7,7 +7,7 @@
 
 	<!-- 4.5.4. 명시적 그리드(Explicit Grids)와 암시적 그리드(Implicit Grids)의 차이점 -->
 	<section class="mt_xxl indent">
-		<h2 class="ml_mn">4.5.4. 명시적 그리드(Explicit Grids)와 암시적 그리드(Implicit Grids)의 차이점</h2>
+		<h2 class="ml_mn">4.5.4. <i class="t_blue">명시적</i> 그리드(Explicit Grids)와 <i class="t_blue">암시적</i> 그리드(Implicit Grids)의 차이점</h2>
 
 		<!-- 명시적 그리드(Explicit Grids) -->
 		<article class="mt_xl indent">
