--- a/assets/01-html/08-table/01-table_element.html
+++ b/assets/01-html/08-table/01-table_element.html
@@ -33,9 +33,10 @@
 			</li>
 			<li class="line_code font14 mt_s">
 				<strong>
-					summary - 더 이상 사용되지 않지만 다음과 같이 대체 가능<br>
-					테이블을 표시 할 수없는 테이블을 설명하기위한 대체 텍스트 사용을 정의합니다.<br>
-					일반적으로 점자 화면을 사용하여 웹을 탐색하는 사람들이 정보를 얻을 수 있도록 설명합니다.
+					summary - 테이블을 직접 확인할 수 없는 경우에 대비하여<br>
+					해당 테이블을 설명하기 위한 대체 텍스트 사용을 정의합니다.<br>
+					일반적으로 점자 화면을 사용하여 웹을 탐색하는 사람들이 정보를 얻을 수 있도록 설명합니다.<br>
+					더 이상 사용되지 않는 속성으로, 다음과 같이 대체할 수 있습니다.
 				</strong>
 				<p>테이블의 <code>&lt;caption&gt;</code>요소를 사용.</p>
 				<p><code>&lt;details&gt;</code>내부 요소 <code>&lt;caption&gt;</code>요소를 사용.</p>
