--- a/assets/01-html/08-table/02-caption_element.html
+++ b/assets/01-html/08-table/02-caption_element.html
@@ -8,9 +8,9 @@
 	<section class="mt_xxl">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			HTML <code>&lt;caption&gt;</code> 요소 (or HTML Table Caption Element)는 표의 제목을 나타낸다.<br>
-			이것은 항상 <code>&lt;table&gt;</code>의 첫 번쨰 자손이지만, CSS를 사용한 styling은 표와 관련된 다른 곳에서 배치할 수 있다.<br>
-			summary속성 대신 대체 텍스트 사용을 정의하며, 일반적으로 점자 화면을 사용하여 웹을 탐색하는 사람들이 정보를 얻을 수 있도록 설명합니다.
+			HTML <code>&lt;caption&gt;</code> 요소 (or HTML Table Caption Element)는 표의 제목을 나타냅니다.<br>
+			이 요소는 반드시 <code>&lt;table&gt;</code>의 첫 번쨰 자식 요소로 배치되어야 하지만, CSS를 사용한 styling은 표와 관련된 다른 곳에 배치할 수 있습니다.<br>
+			summary 속성 대신 대체 텍스트 사용을 정의하며, 일반적으로 점자 화면을 사용하여 웹을 탐색하는 사람들이 정보를 얻을 수 있도록 설명합니다.
 		</p>
 	</section>
 
