--- a/assets/01-html/08-table/03-colgroup_element.html
+++ b/assets/01-html/08-table/03-colgroup_element.html
@@ -9,7 +9,7 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			HTML Table Column Group 요소(<code>&lt;colgroup&gt;</code>)는 표 내부의 칸의 그룹을 정의합니다.<br>
-			<code>&lt;table&gt;</code>의 자식 요소로 생략이 가능하며, CSS로 대체 가능합니다.
+			<code>&lt;table&gt;</code>의 자식 요소로 생략이 가능합니다.
 		</p>
 	</section>
 
