--- a/assets/01-html/08-table/04-col_element.html
+++ b/assets/01-html/08-table/04-col_element.html
@@ -8,9 +8,9 @@
 	<section class="mt_xxl">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			HTML Table Column 요소 (<code>&lt;col&gt;</code>) 는 표 내부의 열을 정의하며 모든 공통 셀들의 공통 시멘틱을 정의하기 위해 사용됩니다.<br>
-			일반적으로 <code>&lt;colgroup&gt;</code> 요소 내부에 있습니다.<br>
-			단일요소로 종료 태그 없이 사용됩니다.
+			HTML Table Column 요소(<code>&lt;col&gt;</code>)는 표 내부의 열을 정의하며 모든 공통 셀들의 공통 시멘틱을 정의하기 위해 사용됩니다.<br>
+			반드시 <code>&lt;colgroup&gt;</code> 요소의 자식 요소로 존재해야 합니다.<br>
+			단일 요소로 종료 태그 없이 사용됩니다.
 		</p>
 	</section>
 
