--- a/assets/01-html/08-table/05-thead_element.html
+++ b/assets/01-html/08-table/05-thead_element.html
@@ -13,10 +13,9 @@
 		<p class="mt_s">
 			브라우저는 이러한 요소들을 사용하여 테이블의 헤더나 푸터와는 독립적으로 테이블의 내용만 스크롤되게 할 수 있으며, 여러 페이지에 걸쳐 있는 큰 테이블을 인쇄할 때 각 페이지의 상단과 하단에 테이블의 헤더와 푸터가 모두 인쇄되도록 할 수도 있습니다.<br>
 			<code>&lt;thead&gt;</code> 요소는 <code>&lt;table&gt;</code> 요소의 자식 요소로써,
-			반드시 모든 <code>&lt;caption&gt;</code>, <code>&lt;colgroup&gt;</code> 요소 다음에 위치해야 합니다.<br>
+			반드시 <code>&lt;caption&gt;</code>, <code>&lt;colgroup&gt;</code> 요소 다음에 위치해야 합니다.<br>
 			또한, <code>&lt;thead&gt;</code> 요소는 반드시 하나 이상의 <code>&lt;tr&gt;</code> 요소를 포함하고 있어야 합니다. <br>
-			<code>&lt;thead&gt;</code>와 <code>&lt;tbody&gt;</code>, <code>&lt;tfoot&gt;</code> 요소는 기본적으로 웹 페이지의 레이아웃에 전혀 영향을 주지 않지만,
-			이 요소들의 스타일을 CSS를 사용하여 변경할 수는 있습니다.
+			<code>&lt;thead&gt;</code>와 <code>&lt;tbody&gt;</code>, <code>&lt;tfoot&gt;</code> 요소는 기본적으로 웹 페이지의 레이아웃에 전혀 영향을 주지 않지만, 이 요소들의 스타일을 CSS를 사용하여 변경할 수는 있습니다.
 		</p>
 		<p class="mt_s">
 			HTML5에서는 <code>&lt;thead&gt;</code> 요소의 align, char, charoff, valign 속성을 더 이상 지원하지 않습니다.
