--- a/assets/01-html/08-table/06-tbody_element.html
+++ b/assets/01-html/08-table/06-tbody_element.html
@@ -20,12 +20,11 @@
 		</p>
 		<p class="mt_s">
 			<code>&lt;tbody&gt;</code> 요소는 <code>&lt;table&gt;</code> 요소의 자식 요소로써,
-			반드시 모든 <code>&lt;caption&gt;</code>, <code>&lt;colgroup&gt;</code>, <code>&lt;thead&gt;</code> 요소 다음에 위치해야 합니다.<br>
+			반드시 모든 <code>&lt;caption&gt;</code>, <code>&lt;colgroup&gt;</code>, <code>&lt;thead&gt;</code>, <code>&lt;tfoot&gt;</code> 요소 다음에 위치해야 합니다.<br>
 			또한, &lt;tbody&gt; 요소는 반드시 하나 이상의 &lt;tr&gt; 요소를 포함하고 있어야 합니다.
 		</p>
 		<p class="mt_s">
-			<code>&lt;thead&gt;</code>와 <code>&lt;tbody&gt;</code>, <code>&lt;tfoot&gt;</code> 요소는 기본적으로 웹 페이지의 레이아웃에 전혀 영향을 주지 않지만,
-			이 요소들의 스타일을 CSS를 사용하여 변경할 수는 있습니다.
+			<code>&lt;thead&gt;</code>와 <code>&lt;tbody&gt;</code>, <code>&lt;tfoot&gt;</code> 요소는 기본적으로 웹 페이지의 레이아웃에 전혀 영향을 주지 않지만, 이 요소들의 스타일을 CSS를 사용하여 변경할 수는 있습니다.
 		</p>
 		<p class="mt_s">
 			HTML5에서는 <code>&lt;tbody&gt;</code> 요소의 align, char, charoff, valign 속성을 더 이상 지원하지 않습니다.
