--- a/assets/01-html/08-table/06-tbody_element.html
+++ b/assets/01-html/08-table/06-tbody_element.html
@@ -20,7 +20,7 @@
 		</p>
 		<p class="mt_s">
 			<code>&lt;tbody&gt;</code> 요소는 <code>&lt;table&gt;</code> 요소의 자식 요소로써,
-			반드시 모든 <code>&lt;caption&gt;</code>, <code>&lt;colgroup&gt;</code>, <code>&lt;thead&gt;</code>, <code>&lt;tfoot&gt;</code> 요소 다음에 위치해야 합니다.<br>
+			반드시 모든 <code>&lt;caption&gt;</code>, <code>&lt;colgroup&gt;</code>, <code>&lt;thead&gt;</code> 요소 다음에 위치해야 합니다.<br>
 			또한, &lt;tbody&gt; 요소는 반드시 하나 이상의 &lt;tr&gt; 요소를 포함하고 있어야 합니다.
 		</p>
 		<p class="mt_s">
