--- a/assets/01-html/08-table/08-tr_element.html
+++ b/assets/01-html/08-table/08-tr_element.html
@@ -9,7 +9,7 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			<code>&lt;tr&gt;</code> 요소는 테이블에서 셀들로 이루어진 하나의 행(row)을 정의할 때 사용합니다.
-			<code>&lt;tr&gt;</code> 요소는 하나 이상의 <code>&lt;th&gt;</code> 요소(data cell)나 <code>&lt;td&gt;</code> 요소(header cell)를 포함할 수 있습니다.
+			<code>&lt;tr&gt;</code> 요소는 하나 이상의 <code>&lt;th&gt;</code> 요소(header cell)나 <code>&lt;td&gt;</code> 요소(data cell)를 포함할 수 있습니다.
 		</p>
 		<p class="mt_s">
 			HTML5에서는 <code>&lt;tr&gt;</code> 요소의 align, bgcolor, char, charoff, valign 속성을 더 이상 지원하지 않습니다.
