--- a/assets/01-html/08-table/09-th_element.html
+++ b/assets/01-html/08-table/09-th_element.html
@@ -58,7 +58,7 @@
 			<h3 class="ml_mn">[headers] <span class="t_blue">&lt;th headers="header id"&gt;</span></h3>
 			<p class="mt_s">
 				해당 요소의 headers 속성은 해당 헤더 셀과 연관된 하나 이상의 헤더 셀(header cell)을 명시합니다.<br>
-				header id 값은 해당 헤더 셀과 연관된 헤더 셀(header cell)들의 id 속성값을 공백으로 구분한 리스트<br>
+				header id값은 해당 헤더 셀과 연관된 헤더 셀(header cell)들의 id 속성값을 공백으로 구분한 리스트입니다.<br>
 				일반 웹 브라우저에서는 해당 요소에 headers 속성을 명시해도 시각적으로 어떠한 효과도 보여주지 않지만, 스크린 리더기와 같은 장치에서는 유용하게 사용됩니다.
 			</p>
 		</article>
@@ -66,7 +66,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[scope] <span class="t_blue">&lt;th scope="col | row | colgroup | rowgroup"&gt;</span></h3>
 			<p class="mt_s">
-				해해당 요소의 scope 속성은 테이블에서 헤더 셀과 데이터 셀을 연결하는 방법을 명시함.<br>
+				해당 요소의 scope 속성은 테이블에서 헤더 셀과 데이터 셀을 연결하는 방법을 명시합니다.<br>
 				일반 웹 브라우저에서는 해당 요소에 headers 속성을 명시해도 시각적으로 어떠한 효과도 보여주지 않지만, 스크린 리더기와 같은 장치에서는 유용하게 사용됩니다.
 			</p>
 			<ol class="ol_lst indent mt_s">
