--- a/assets/01-html/08-table/10-td_element.html
+++ b/assets/01-html/08-table/10-td_element.html
@@ -51,8 +51,8 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[headers] <span class="t_blue">&lt;td headers="header id"&gt;</span></h3>
 			<p class="mt_s">
-				해당 요소의 headers 속성은 해당 헤더 셀과 연관된 하나 이상의 헤더 셀(header cell)을 명시함.<br>
-				header id 값은 해당 헤더 셀과 연관된 헤더 셀(header cell)들의 id 속성값을 공백으로 구분한 리스트<br>
+				해당 요소의 headers 속성은 해당 헤더 셀과 연관된 하나 이상의 헤더 셀(header cell)을 명시합니다.<br>
+				header id값은 해당 헤더 셀과 연관된 헤더 셀(header cell)들의 id 속성값을 공백으로 구분한 리스트입니다.<br>
 				일반 웹 브라우저에서는 해당 요소에 headers 속성을 명시해도 시각적으로 어떠한 효과도 보여주지 않지만, 스크린 리더기와 같은 장치에서는 유용하게 사용됩니다.
 			</p>
 		</article>
