--- a/assets/01-html/08-table/note.html
+++ b/assets/01-html/08-table/note.html
@@ -4,7 +4,7 @@
 	<ul>
 		<li>이 요소들의 집합은 특별히 표(테이블 형식)의 데이터를 처리하기 위해 만들어졌습니다.</li>
 		<li>레이아웃 보조 도구로 테이블을 사용해서는 안됩니다.</li>
-		<li>colgroup,thead,tbody,tfoot,tr,th,td 요소는 종료 태그를 생략 할 수 있으나 요소가 비어 있으면 생략 할 수 없습니다.</li>
+		<li>colgroup, thead, tbody, tfoot, tr, th, td 요소는 종료 태그를 생략할 수 있으나 빈 요소인 경우 생략할 수 없습니다.</li>
 		<li>하지만 습관적으로 종료 태그를 사용하는 것을 권장합니다.</li>
 	</ul>
 </div>
