--- a/assets/01-html/09-forms/01-form_element.html
+++ b/assets/01-html/09-forms/01-form_element.html
@@ -26,8 +26,8 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[action] <span class="t_blue">&lt;form action="URL"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;form&gt;</code> 요소의 action 속성은 폼 데이터(form data)를 서버로 보낼 때 해당 데이터가 도착할 URL을 명시합니다.<br>
-				이 값은 <code>&lt;button&gt;</code> 또는 <code>&lt;input&gt;</code> 요소 의 formaction 속성 으로 대체 될 수 있습니다.<br>
+				<code>&lt;form&gt;</code> 요소의 action 속성은 폼 데이터(form data)를 서버로 전송할 때 해당 데이터가 도착할 URL을 명시합니다.<br>
+				이 값은 <code>&lt;button&gt;</code> 또는 <code>&lt;input&gt;</code> 요소의 formaction 속성으로 대체될 수 있습니다.<br>
 				HTML5에서는 더 이상 <code>&lt;form&gt;</code> 요소에 반드시 action 속성을 명시할 필요가 없도록 변경되었습니다.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.1.form_element_action.html">
@@ -40,8 +40,8 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[method] <span class="t_blue">&lt;form method="get | post"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;form&gt;</code> 요소의 method 속성은 폼 데이터(form data)가 서버로 제출될 때 사용되는 HTTP 메소드를 명시합니다.<br>
-				method 속성은 속성값으로는 GET과 POST 두 가지 중 하나를 선택할 수 있습니다.
+				<code>&lt;form&gt;</code> 요소의 method 속성은 폼 데이터(form data)가 서버로 전송될 때 사용되는 HTTP 메소드를 명시합니다.<br>
+				속성값으로는 GET과 POST 두 가지 중 하나를 선택할 수 있습니다.
 			</p>
 			<p class="mt_s">
 				GET 방식은 URL에 폼 데이터를 추가하여 서버로 전달하는 방식입니다.<br>
@@ -62,7 +62,7 @@
 				</li>
 				<li class="line_code font14 mt_s">
 					<strong>post</strong>
-					<p>폼 데이터를 HTTP POST 메소드로 전송함. 폼 데이터가 폼의 바디에 포함되어 서버에 전달됨.</p>
+					<p>폼 데이터를 HTTP POST 메소드로 전송함. 폼 데이터가 폼의 바디에 포함되어 서버에 전송됨.</p>
 				</li>
 			</ol>
 			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.1.form_element_method.html">
@@ -89,38 +89,38 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[target] <span class="t_blue">&lt;form target="_self | _blank | _parent | _top | 프레임 이름"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;form&gt;</code> 요소의 target 속성은 폼 데이터(form data)를 서버로 제출한 후 받는 응답이 열릴 위치를 명시합니다.<br>
+				<code>&lt;form&gt;</code> 요소의 target 속성은 폼 데이터(form data)를 서버로 전송한 후 받는 응답이 열릴 위치를 명시합니다.<br>
 				HTML 4.01에서는 <code>&lt;form&gt;</code> 요소의 target 속성을 지원하지 않았지만, HTML5부터는 지원하도록 변경되었습니다.<br>
 				HTML5에서는 프레임(frame)과 프레임셋(frameset)을 더 이상 지원하지 않습니다.<br>
 				따라서 _parent, _top, 프레임 이름과 같은 속성값들은 iframe 요소와 함께 주로 사용됩니다.
 			</p>
 			<p class="mt_s">
-				이 값은 <code>&lt;button&gt;</code> 또는 <code>&lt;input&gt;</code> 요소의 formmethod 속성으로 대체 될 수 있습니다.
+				이 값은 <code>&lt;button&gt;</code> 또는 <code>&lt;input&gt;</code> 요소의 formmethod 속성으로 대체 가능합니다.
 			</p>
 			<div class="ol_lst mt_ms">
 				<h4>가능한 값은 다음과 같습니다.</h4>
 				<ol class="indent">
 					<li class="line_code font14 mt_s">
 						<strong>_self</strong>
-						<p>기본값으로 생략 가능. 서버로부터 받은 응답을 링크가 위치한 현재 프레임에서 보여줌.</p>
+						<p>기본값으로 생략 가능합니다. 서버로부터 받은 응답이 링크가 위치한 현재 프레임에서 출력됩니다.</p>
 					</li>
 					<li class="line_code font14 mt_sm">
 						<strong>_blank</strong>
-						<p>서버로부터 받은 응답을 새로운 윈도우나 탭(tab)에서 보여줌.</p>
+						<p>서버로부터 받은 응답이 새로운 윈도우나 탭(tab)에서 출력됩니다.</p>
 					</li>
 					<li class="line_code font14 mt_sm">
 						<strong>_parent</strong>
-						<p>서버로부터 받은 응답을 현재 프레임의 부모 프레임에서 보여줌. 만약 부모가 없을 경우 _self와 동일하게 여겨집니다.</p>
+						<p>서버로부터 받은 응답이 현재 프레임의 부모 프레임에서 출력됩니다. 만약 부모가 없을 경우 _self와 동일하게 여겨집니다.</p>
 					</li>
 					<li class="line_code font14 mt_sm">
 						<strong>_top</strong>
-						<p>서버로부터 받은 응답을 현재 윈도우 전체에서 보여줌.</p>
-						<p>HTML4에서는, 다른 모든 프레임을 취소하고 결과를 꽉찬 본래의 윈도우에 로드합니다.</p>
+						<p>서버로부터 받은 응답이 현재 윈도우 전체에서 출력됩니다.</p>
+						<p>HTML4에서는, 다른 모든 프레임을 취소하고 결과를 꽉 찬 본래의 윈도우에 로드합니다.</p>
 						<p>HTML5에서는, 결과를 최상위 브라우징 컨텍스트에 로드합니다. 만약 부모가 없다면, 이 옵션은 _self와 같이 행동합니다.</p>
 					</li>
 					<li class="line_code font14 mt_sm">
 						<strong>프레임이름</strong>
-						<p>서버로부터 받은 응답을 명시된 프레임에서 보여줌.</p>
+						<p>서버로부터 받은 응답이 명시된 프레임에서 출력됩니다.</p>
 					</li>
 				</ol>
 			</div>
@@ -134,9 +134,9 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[accept-charset] <span class="t_blue">&lt;form accept-charset="문자셋"&gt;</span></h3>
 			<p class="mt_s">
-				서식 데이터(form data)를 서버로 보낼 때 사용되는 하나 이상의 문자 인코딩 방식이 공백 문자(space)로 구분된 리스트.<br>
-				<code>&lt;form&gt;</code> 요소의 accept-charset 속성은 폼 데이터(form data)를 서버로 보낼 때 사용되는 문자 인코딩(character encoding) 방식을 명시합니다.<br>
-				accept-charset 속성의 기본값은 <code>&quot;UNKNOWN&quot;</code>으로 설정되며, 이 값은 <code>&lt;form&gt;</code> 요소가 포함되어 있는 HTML 문서의 문자 인코딩과 같음을 나타냅니다.<br>
+				서식 데이터(form data)를 서버로 전송 시 사용되는 하나 이상의 문자 인코딩 방식이 공백 문자(space)로 구분된 리스트입니다.<br>
+				<code>&lt;form&gt;</code> 요소의 accept-charset 속성은 폼 데이터(form data)를 서버로 전송 시 사용되는 문자 인코딩(character encoding) 방식을 명시합니다.<br>
+				accept-charset 속성의 기본값은 <code>&quot;UNKNOWN&quot;</code>으로 설정되며, 이 값은 <code>&lt;form&gt;</code> 요소가 포함되어 있는 HTML 문서의 문자 인코딩과 동일함을 나타냅니다.<br>
 				HTML 4.01에서 문자 인코딩 리스트는 공백 문자(space)나 콤마(,) 중 원하는 문자를 사용하여 각각의 인코딩 방식을 구분할 수 있었지만,
 				HTML5에서는 반드시 공백 문자만을 사용하여 구분하도록 변경되었습니다.
 			</p>
@@ -150,7 +150,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[enctype] <span class="t_blue">&lt;form enctype="application/x-www-form-urlencoded | multipart/form-data | text/plain"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;form&gt;</code> 요소의 enctype 속성은 폼 데이터(form data)가 서버로 제출될 때 해당 데이터가 인코딩되는 방법을 명시합니다.<br>
+				<code>&lt;form&gt;</code> 요소의 enctype 속성은 폼 데이터(form data)가 서버로 전송될 때 해당 데이터가 인코딩되는 방법을 명시합니다.<br>
 				이 속성은 <code>&lt;form&gt;</code> 요소의 method 속성값이 <code>&quot;post&quot;</code>인 경우에만 사용할 수 있습니다.
 			</p>
 			<div class="ol_lst mt_ms">
@@ -158,15 +158,15 @@
 				<ol class="indent">
 					<li class="line_code font14 mt_s">
 						<strong>application/x-www-form-urlencoded</strong>
-						<p>속성이 지정되지 않은 경우 기본값입니다. 모든 문자들은 서버로 보내기 전에 인코딩됨을 명시함.</p>
+						<p>속성이 지정되지 않은 경우 기본값입니다. 모든 문자들은 서버로 전송 전에 인코딩됨을 명시합니다.</p>
 					</li>
 					<li class="line_code font14 mt_s">
 						<strong>multipart/form-data</strong>
-						<p>모든 문자를 인코딩하지 않음을 명시함. 이 방식은 <code>&lt;form&gt;</code> 요소가 파일이나 이미지를 서버로 전송할 때 주로 사용함.</p>
+						<p>모든 문자를 인코딩하지 않음을 명시합니다. 이 방식은 <code>&lt;form&gt;</code> 요소가 파일이나 이미지를 서버로 전송 시 주로 사용합니다.</p>
 					</li>
 					<li class="line_code font14 mt_s">
 						<strong>text/plain (HTML5에서 새롭게 추가)</strong>
-						<p>공백 문자(space)는 "+" 기호로 변환하지만, 나머지 문자는 모두 인코딩되지 않음을 명시함.</p>
+						<p>공백 문자(space)는 "+" 기호로 변환하지만, 나머지 문자는 모두 인코딩되지 않음을 명시합니다.</p>
 					</li>
 				</ol>
 			</div>
@@ -180,7 +180,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[autocomplete] <i class="fab fa-html5"></i> <span class="t_blue">&lt;form autocomplete="on | off"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;form&gt;</code> 요소의 autocomplete 속성은 <code>&lt;form&gt;</code> 요소에서 자동 완성 기능을 사용할지 여부를 명시합니다.<br>
+				<code>&lt;form&gt;</code> 요소의 autocomplete 속성은 <code>&lt;form&gt;</code> 요소에서 자동 완성 기능을 사용할 지 여부를 명시합니다.<br>
 				autocomplete 속성값을 on으로 명시하면, 브라우저는 사용자가 이전에 입력했던 값들을 기반으로 사용자가 입력한 값과 비슷한 값들을 드롭다운 옵션으로 보여줍니다.<br>
 				이 속성을 사용하면 <code>&lt;form&gt;</code> 요소에서는 자동 완성 기능을 사용하면서 특정 <code>&lt;input&gt;</code> 요소에서는 자동 완성 기능을 사용하지 않거나 그 반대로 설정하는 것도 가능합니다.
 			</p>
@@ -192,11 +192,11 @@
 				<ol class="indent">
 					<li class="line_code font14 mt_s">
 						<strong>on</strong>
-						<p>기본값으로, 브라우저는 사용자가 이전에 입력한 값을 기반으로 자동으로 값을 완성함.</p>
+						<p>기본값으로, 브라우저는 사용자가 이전에 입력한 값을 기반으로 자동으로 값을 완성합니다.</p>
 					</li>
 					<li class="line_code font14 mt_s">
 						<strong>off</strong>
-						<p>브라우저가 자동으로 값을 완성하지 않으므로, 사용자는 매번 각 입력 필드에 값을 끝까지 입력해야 함.</p>
+						<p>브라우저가 자동으로 값을 완성하지 않으므로, 사용자는 매번 각 입력 필드에 값을 끝까지 입력해야 합니다.</p>
 					</li>
 				</ol>
 			</div>
@@ -210,12 +210,13 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[novalidate] <i class="fab fa-html5"></i> <span class="t_blue">&lt;form novalidate&gt;</span></h3>
 			<p class="mt_s">
-				기본적으로 novalidate 속성은 boolean attribute(블리언 속성) 입니다.<br>
+				기본적으로 novalidate 속성은 boolean attribute(블리언 속성)입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.<br>
-				이 불리언 속성은 양식을 제출할 때(폼 데이터가 서버로 제출될 때) 해당 데이터의 유효성을 검사하지 않음을 명시함.
+				이 불리언 속성은 양식을 제출 시(폼 데이터가 서버로 전송 시) 해당 데이터의 유효성을 검사하지 않음을 명시합니다.
 			</p>
 			<p class="mt_s">
-				이 속성을 지정하지 않으면 (양식의 유효성이 검사 됨) 이 기본 설정은 <code>&lt;button&gt;</code> 또는 <code>&lt;input&gt;</code> 요소의 formnovalidate속성 으로 대체 될 수 있습니다.
+				이 속성을 지정하지 않으면 양식 제출 시 양식의 유효성이 검사되며,<br>
+				이 기본 설정은 <code>&lt;button&gt;</code> 또는 <code>&lt;input&gt;</code> 요소의 formnovalidate속성으로 대체 가능합니다.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.1.form_element_novalidate.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
