--- a/assets/01-html/09-forms/03-input_element_part2.html
+++ b/assets/01-html/09-forms/03-input_element_part2.html
@@ -20,8 +20,8 @@
 			<code>&lt;input&gt;</code> 요소는 사용자가 데이터를 입력할 수 있는 입력 필드를 선언하기 위해 <code>&lt;form&gt;</code> 요소 내부에서 사용됩니다.<br>
 			이러한 입력 필드는 <code>&lt;input&gt;</code> 요소의 type 속성값을 달리함으로써 여러 가지 모양으로 나타낼 수 있습니다.<br>
 			<code>&lt;input&gt;</code> 요소는 빈 요소(empty elements)이며, 속성만을 포함하고 있습니다.<br>
-			<code>&lt;label&gt;</code> 요소를 사용하면 <code>&lt;input&gt;</code> 요소의 라벨(label)을 정의할 수도 있습니다.<br>
-			<code>&lt;input&gt;</code> 요소에 type 속성을 지정하지 않으면 채택되는 기본 유형은 text 입니다.
+			<code>&lt;label&gt;</code> 요소를 사용하면 <code>&lt;input&gt;</code> 요소의 레이블(label)을 정의할 수도 있습니다.<br>
+			<code>&lt;input&gt;</code> 요소에 type 속성을 지정하지 않으면 채택되는 기본 유형은 'text'입니다.
 		</p>
 		<p class="mt_s">
 			HTML5에서는 <code>&lt;input&gt;</code> 요소의 align 속성을 더 이상 지원하지 않습니다.<br>
@@ -29,7 +29,7 @@
 			HTML5에서는 <code>&lt;input&gt;</code> 요소에 다음과 같은 type 속성값들이 새롭게 추가되었습니다.<br>
 			color, date, datetime-local, email, month, number, range, search, tel, time, url, week
 			HTML에서는 <code>&lt;input&gt;</code> 요소를 닫지 않지만, XHTML에서는 반드시 요소를 닫아야만 합니다.<br>
-			input요소는 전역속성을 포함합니다.
+			input 요소는 전역 속성을 포함합니다.
 		</p>
 	</section>
 
@@ -42,13 +42,13 @@
 			<p class="mt_s">
 				<code>&lt;input&gt;</code> 요소의 이름을 명시합니다.<br>
 				name 속성은 폼(form)이 제출된 후 서버에서 폼 데이터(form data)를 참조하기 위해 사용되거나, 자바스크립트에서 요소를 참조하기 위해 사용됩니다.<br>
-				name속성은 <code>&lt;input&gt;</code>요소에서 가장 중요한 속성일 것입니다.<br>
+				name 속성은 <code>&lt;input&gt;</code> 요소에서 가장 중요한 속성일 것입니다.<br>
 				유효성 검사에 반드시 필요한 것은 아니지만 절대로 생략해서는 안됩니다.<br>
 				양식이 서버에 제출되면 양식의 데이터가 HTTP 요청에 포함됩니다.<br>
 				데이터는 일련의 이름-값 쌍으로 패키지됩니다.<br>
-				각 이름-값 쌍의 이름 name은 각 입력 의 속성이며 값은 사용자가 입력 한 (또는 미리 지정된) 값입니다.<br>
-				name속성이 없으면 <code>&lt;input&gt;</code>요소는 양식 제출시 서버에 값을 제공 할 수 없습니다.<br>
-				현재는 data-* 전역속성을 많이 사용하고 있습니다.
+				각 이름-값 쌍의 이름 name은 각 입력의 속성이며 값은 사용자가 입력한(또는 미리 지정된) 값입니다.<br>
+				name 속성이 없으면 <code>&lt;input&gt;</code>요소는 양식 제출시 서버에 값을 제공할 수 없습니다.<br>
+				현재는 data-* 전역 속성을 많이 사용하고 있습니다.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.3.input_element_name.html">
 				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
@@ -69,11 +69,11 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[value] <span class="t_blue">&lt;input value="텍스트"&gt;</span></h3>
 			<p class="mt_s">
-				입력 필드의 초기 값 또는 기본 선택을 명시합니다.<br>
+				입력 필드의 초기값 또는 기본 선택을 명시합니다.<br>
 				value 속성은 <code>&lt;input&gt;</code> 요소의 type 속성값에 따라 다른 용도로 사용됩니다.<br>
-				&quot;button&quot;, &quot;reset&quot;, &quot;submit&quot; : 버튼 내의 텍스트를 정의함.<br>
-				&quot;hidden&quot;, &quot;password&quot;, &quot;text&quot; : 입력 필드의 초깃값을 정의함.<br>
-				&quot;checkbox&quot;, &quot;image&quot;, &quot;radio&quot; : 해당 입력 필드를 선택 시 서버로 제출되는 값을 정의함.<br>
+				&quot;button&quot;, &quot;reset&quot;, &quot;submit&quot; : 버튼 내의 텍스트를 정의합니다.<br>
+				&quot;hidden&quot;, &quot;password&quot;, &quot;text&quot; : 입력 필드의 초기값을 정의합니다.<br>
+				&quot;checkbox&quot;, &quot;image&quot;, &quot;radio&quot; : 해당 입력 필드를 선택 시 서버로 제출되는 값을 정의합니다.<br>
 				또한, &lt;input&gt; 요소의 type 속성값이 &quot;file&quot;인 경우에는 value 속성을 사용할 수 없습니다.
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_value.html">
@@ -95,7 +95,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[checked] <span class="t_blue">&lt;input type="checkbox|radio" checked&gt;</span></h3>
 			<p class="mt_s">
-				기본적으로 checked 속성은 boolean attribute(블리언 속성) 입니다.<br>
+				기본적으로 checked 속성은 boolean attribute(불리언 속성) 입니다.<br>
 				<code>&lt;input&gt;</code> 요소의 checked 속성은 페이지가 로드될 때 미리 선택될 <code>&lt;input&gt;</code> 요소를 명시합니다.<br>
 				checked 속성은 페이지가 로드된 후에도 자바스크립트를 사용하여 설정할 수 있습니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.<br>
@@ -179,7 +179,7 @@
 			<h3 class="ml_mn">[size] <span class="t_blue">&lt;input type="email | password | search|tel | text|url" size="숫자"&gt;</span></h3>
 			<p class="mt_s">
 				<code>&lt;input&gt;</code> 요소의 size 속성은 <code>&lt;input&gt;</code> 요소의 너비를 문자수(in characters) 단위로 명시합니다.<br>
-				maxlength 속성을 사용하면, <code>&lt;input&gt;</code> 요소에서 허용되는 최대 문자수를 명시할 수도 있습니다.<br>
+				maxlength 속성을 사용하면, <code>&lt;input&gt;</code> 요소에서 입력이 허용되는 최대 문자수를 명시할 수도 있습니다.<br>
 				size 속성이 제대로 동작하는 <code>&lt;input&gt;</code> 요소의 type 속성값은 다음과 같습니다.<br>
 				email, password, search, tel, text, url
 			</p>
@@ -202,12 +202,10 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[src] <span class="t_blue">&lt;input type="image" src="이미지 URL" alt="대체 텍스트"&gt;</span></h3>
 			<p class="mt_s">
-				제출 버튼(submit button)으로 사용될 이미지의 URL을 명시함.<br>
+				제출 버튼(submit button)으로 사용될 이미지의 URL을 명시합니다.<br>
 				(단, <code>&lt;input&gt;</code> 요소의 type 속성값이 &quot;image&quot;인 경우에만 사용할 수 있음)
 			</p>
 			<p class="mt_s">
-				<code>&lt;input&gt;</code> 요소의 alt 속성은 이미지를 위한 대체 텍스트를 명시합니다.<br>
-				이러한 alt 속성은 사용자가 느린 네트워크 환경이나 src 속성값의 오류, 시각 장애인용 스크린 리더의 사용 등 어떤 이유로든 사용자가 이미지를 볼 수 없을 때 이미지 대신 제공할 대체 정보를 제공합니다.<br>
 				이 속성은 <code>&lt;input&gt;</code> 요소의 type 속성값이 &quot;image&quot;인 경우에만 사용할 수 있습니다.
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_src.html">
@@ -230,7 +228,7 @@
 			<h3 class="ml_mn">[alt] <span class="t_blue">&lt;input type="image" src="이미지 URL" alt="대체 텍스트"&gt;</span></h3>
 			<p class="mt_s">
 				alt 속성은 이미지를 위한 대체 텍스트를 명시합니다.<br>
-				이러한 alt 속성은 사용자가 느린 네트워크 환경이나 src 속성값의 오류, 시각 장애인용 스크린 리더의 사용 등 어떤 이유로든 사용자가 이미지를 볼 수 없을 때 이미지 대신 제공할 대체 정보를 제공합니다.
+				이러한 alt 속성은 사용자가 느린 네트워크 환경이나 src 속성값의 오류, 시각 장애인용 스크린 리더의 사용 등 어떤 이유로든 사용자가 이미지를 직접 확인이 불가능한 경우 이미지 대신 제공할 대체 정보를 제공합니다.
 			</p>
 			<p class="mt_s">
 				이 속성은 <code>&lt;input&gt;</code> 요소의 type 속성값이 <code>&quot;image&quot;</code>인 경우에만 사용할 수 있습니다.
@@ -255,7 +253,7 @@
 			<h3 class="ml_mn">[placeholder] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="email | password | search|tel | text | url" placeholder="텍스트"&gt;</span></h3>
 			<p class="mt_s">
 				<code>&lt;input&gt;</code> 요소의 placeholder 속성은 입력 필드에 사용자가 적절한 값을 입력할 수 있도록 도와주는 짧은 도움말을 명시합니다.<br>
-				이러한 도움말은 사용자가 입력할 수 있는 값에 대한 견본 값이나 입력 형식에 대한 간단한 설명 등이 사용되며, 사용자가 입력하기 전까지 입력 필드에 표시되다가 사용자가 입력을 시작하면 사라집니다.<br>
+				이러한 도움말은 사용자가 입력할 수 있는 값에 대한 견본값이나 입력 형식에 대한 간단한 설명 등이 사용되며, 사용자가 입력하기 전까지 입력 필드에 표시되다가 사용자가 입력을 시작하면 사라집니다.<br>
 				placeholder 속성이 제대로 동작하는 <code>&lt;input&gt;</code> 요소의 type 속성값은 다음과 같습니다.<br>
 				email, password, search, tel, text, url
 			</p>
@@ -310,7 +308,7 @@
 				이미지의 height 속성과 width 속성은 언제나 명시하는 것이 좋습니다.<br>
 				이 속성들이 명시되어 있으면 웹 페이지가 로드될 때 브라우저가 해당 이미지를 위한 적절한 공간을 남겨둘 수 있지만,
 				이 속성들이 명시되어 있지 않으면 브라우저는 이미지의 크기를 알 수 없어 필요한 공간을 남겨둘 수 없게 됩니다.<br>
-				따라서 이미지가 로딩되는 순간 페이지의 레이아웃이 변경되는 결과를 초래할 수 있습니다.
+				따라서 이미지가 로딩되는 순간 페이지의 레이아웃이 비정상적으로 출력되는 결과를 초래할 수 있습니다.
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_width&height.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -335,8 +333,8 @@
 				accept 속성에 하나 이상의 속성값을 명시할 경우에는 콤마(,)를 사용하여 구분합니다.<br>
 				이러한 accept 속성을 유효성 검사를 도구로 사용해서는 안 되며, 업로드된 파일은 서버에서 검증되어야 합니다.<br>
 				이 속성은 <code>&lt;input&gt;</code> 요소의 type 속성값이 <code>&quot;file&quot;</code>인 경우에만 사용할 수 있습니다.<br>
-				UI에서 바로 해당 파일 목록만 접근해주는 장점이 있음. 예를들어 이미지로 설정된 경우 탐색기 또는 모바일 파일검색시 이미지로 필터링이 적용됨.<br>
-				위 속성은 IE 10 이상에서 가능합니다. 또한 HTML 4.01, HTML5의 값이 차이가 있습니다.
+				UI에서 바로 해당 파일 목록만 접근해주는 장점이 있습니다. 예를 들어 이미지로 설정된 경우 탐색기 또는 모바일 파일 검색 시 이미지로 필터링이 적용됩니다.<br>
+				위 속성은 IE 10 이상에서 가능합니다. 또한 HTML 4.01과 HTML5와의 값의 차이가 있습니다.
 			</p>
 			<div class="ol_lst indent mt_s">
 				<ol>
@@ -345,15 +343,15 @@
 						<code>&lt;input accept=&quot;.txt, .doc, .docx&quot;&gt;</code>
 					</li>
 					<li class="mt_sm">
-						audio/* - 모든 타입의 오디오 파일이 허용됨.<br>
+						audio/* - 모든 타입의 오디오 파일이 허용됩니다.<br>
 						<code>&lt;input accept=&quot;audio/*&quot;&gt;</code>
 					</li>
 					<li class="mt_sm">
-						video/* - 모든 타입의 비디오 파일이 허용됨.<br>
+						video/* - 모든 타입의 비디오 파일이 허용됩니다.<br>
 						<code>&lt;input accept=&quot;video/*&quot;&gt;</code>
 					</li>
 					<li class="mt_sm">
-						image/* - 모든 타입의 이미지 파일이 허용됨.<br>
+						image/* - 모든 타입의 이미지 파일이 허용됩니다.<br>
 						<code>&lt;input accept=&quot;image/*&quot;&gt;</code>
 					</li>
 					<li class="mt_sm">
@@ -380,13 +378,13 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[accesskey] <span class="t_blue">&lt;element accesskey="character(항목을 활성화/포커스 하기위한 키보드 숏컷키)"&gt;</span></h3>
 			<p class="mt_s">
-				요소를 활성화 / 포커스하기위한 단축키를 지정합니다.<br>
-				HTML5에서는 accesskey 속성을 모든 HTML 요소 에서 사용할 수 있습니다 (HTML 요소에서 유효성을 검사하지만 반드시 유용한 것은 아닙니다).<br>
+				요소를 활성화 / 포커스 하기 위한 단축키를 지정합니다.<br>
+				HTML5에서는 accesskey 속성을 모든 HTML 요소에서 사용할 수 있습니다(HTML 요소에서 유효성을 검사하지만 반드시 유용한 것은 아닙니다).<br>
 				HTML 4.01에서 accesskey 속성은 <code>&lt;a&gt;</code>, <code>&lt;area&gt;</code>,
 				<code>&lt;button&gt;</code>, <code>&lt;input&gt;</code>, <code>&lt;label&gt;</code>,
 				<code>&lt;legend&gt;</code> 및 <code>&lt;textarea&gt;</code>와 함께 사용할 수 있습니다.<br>
 				바로 가기 키에 액세스하는 방법은 브라우저 및 OS에 따라 다릅니다. 그러나 대부분의 브라우저에서 바로 가기를 다른 키 조합으로 설정할 수 있습니다.<br>
-				둘 이상의 요소에 동일한 액세스 키가있는 경우 동작이 다릅니다.<br>
+				둘 이상의 요소에 동일한 액세스 키가 있는 경우 동작이 다릅니다.<br>
 				IE, Firefox : 액세스 키를 누르면 다음 요소가 활성화됩니다.<br>
 				Chrome, Safari : 액세스 키를 누른 마지막 요소가 활성화됩니다.<br>
 				Opera : 액세스 키를 누른 첫 번째 요소가 활성화됩니다.
@@ -438,7 +436,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[autocomplete] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="color | datepickers | email | password | range | search | tel | text" autocomplete="on | off"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;input&gt;</code> 요소의 autocomplete 속성은 <code>&lt;input&gt;</code> 요소에서 자동 완성 기능을 사용할지 여부를 명시합니다.<br>
+				<code>&lt;input&gt;</code> 요소의 autocomplete 속성은 <code>&lt;input&gt;</code> 요소에서 자동 완성 기능을 사용할 지 여부를 명시합니다.<br>
 				autocomplete 속성값을 on으로 명시하면,
 				브라우저는 사용자가 이전에 입력했던 값들을 기반으로 사용자가 입력한 값과 비슷한 값들을 드롭다운 옵션으로 보여줍니다.<br>
 				autocomplete 속성이 제대로 동작하는 <code>&lt;input&gt;</code> 요소의 type 속성값은 다음과 같습니다. <br>
@@ -448,11 +446,11 @@
 				<ol>
 					<li class="line_code font14">
 						<strong>on</strong>
-						<p>기본값으로, <code>&lt;input&gt;</code> 요소의 자동 완성 기능을 사용함.</p>
+						<p>기본값으로, <code>&lt;input&gt;</code> 요소의 자동 완성 기능을 사용합니다.</p>
 					</li>
 					<li class="line_code font14 mt_s">
 						<strong>off</strong>
-						<p><code>&lt;input&gt;</code> 요소의 자동 완성 기능을 사용하지 않음.</p>
+						<p><code>&lt;input&gt;</code> 요소의 자동 완성 기능을 사용하지 않습니다.</p>
 					</li>
 				</ol>
 			</div>
